myteo/test/analyze/main_function/missing_main.exp
ERROR: test/analyze/main_function/missing_main.myte:4:0 No main function found in program
 4 | 
   | ^